# ImpulseExemple

./: CMakeLists.txt  README.md  README.txt  main.cpp
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_4_compiled.cpp  tflite_learn_4_compiled.h
